# grid

./: .gitignore  CMakeLists.txt  CMakePresets.json
grid/: CMakeLists.txt  CMakePresets.json  grid.cpp  grid.sln  grid.vcxproj  pch.h
grid/common/: point.h
grid/hex_grid/: AxialPoint.h  AxialPointFunctions.cpp  AxialPointFunctions.h  axial_point.h  axial_point_fn.cpp  axial_point_fn.h  hex_offset_type.h  hex_point_fn.h  rect_hex_grid.h
grid/src/: grid.cpp
grid/src/hex_grid/: axial_point_fn.cpp
grid_static/: CMakeLists.txt
grid_static/src/common/: point.h
grid_static/src/hex_grid/: axial_point.h  axial_point_fn.cpp  axial_point_fn.h  hex_offset_type.h  hex_point_fn.h  rect_hex_grid.h
